# video-to-srt

./: .env.example  .gitignore  BLUR_TIMING.md  DOCKER.md  Dockerfile  Dockerfile.gpu  LOGGING.md  PROJECT_REVIEW.md  README.md  USAGE.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py  setup.py
.agents/instructions/: constructor.instructions.md
.github/: copilot-instructions.md
app/: __init__.py  main.py
app/api/: routes.py
app/core/: __init__.py  config.py  database.py  logging_config.py
app/models/: __init__.py  database.py  internal.py  requests.py  responses.py
app/services/: __init__.py  database_service.py  ffmpeg_service.py  ocr_service.py  srt_service.py  storage_service.py  tts_service.py  video_processor.py
app/utils/: __init__.py  hash_utils.py  image_utils.py  text_utils.py
docker/: DOCKER.md  Dockerfile  Dockerfile.gpu  docker-compose.yml
migrations/: 001_initial_schema.py  002_add_audio_quota_columns.py  003_add_subtitles_columns.py  migrate.py
usage/: 00-DATABASE-SETUP.md  01-INSTALLATION.md  02-RUNNING-SERVER.md  03-DOCKER-DEPLOYMENT.md  04-EXTRACT-SRT.md  05-PARAMETER-TUNING.md  06-VIDEO-PROCESSING.md  07-TTS-SYNTHESIS.md  08-VIDEO-UPLOAD.md  09-CONFIGURATION.md  10-API-REFERENCE.md  11-CHANGELOG.md  12-MERGE-VIDEO-AUDIO.md  README.md
