[project]
name = "video-to-srt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "alembic>=1.12.0,<2.0.0",
    "fastapi==0.128.1",
    "numpy>=1.24.0,<2.0.0",
    "opencv-python-headless>=4.8.0,<5.0.0",
    "paddleocr==2.7.0.3",
    "paddlepaddle==3.0.0",
    "paddlepaddle-gpu==2.5.2",
    "pillow>=10.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart==0.0.22",
    "setuptools==80.9.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "uvicorn[standard]>=0.24.0,<0.31.0",
    "websocket-client==1.9.0",
]
